# New-project

./: .gitignore  README.md  pyproject.toml
src/handicap_ai/: auto_analysis.py  backtest.py  cache_scan.py  candidate_search.py  cli.py  database.py  demo_data.py  features.py  history_import.py  ingest.py  labels.py  live_analysis.py  manual_html.py  models.py  names.py  recommendation.py  report.py  resolver.py  scorecard.py  settlement.py  similarity.py  source_checks.py  source_discovery.py  source_fetch.py  source_matrix.py  source_status.py  ui.py  world_cup_seed.py
tests/: test_auto_analysis.py  test_backtest.py  test_betexplorer_adapter.py  test_cache_scan.py  test_candidate_search.py  test_cli.py  test_database.py  test_demo_data.py  test_end_to_end_analysis.py  test_features.py  test_football_data_adapter.py  test_free_web_adapter.py  test_history_import.py  test_ingest.py  test_live_analysis.py  test_manual_html.py  test_names.py  test_oddsportal_adapter.py  test_project_scaffold.py  test_recommendation.py  test_report.py  test_resolver.py  test_scorecard.py  test_scrape_cli.py  test_scrape_database.py  test_scrape_fetcher.py  test_scraping_models.py  test_settlement.py  test_similarity.py  test_source_checks.py  test_source_cli.py  test_source_discovery.py  test_source_fetch.py  test_source_matrix.py  test_source_status.py  test_tournament_database.py  test_ui.py  test_ui_cli.py  test_world_cup_cli.py  test_world_cup_seed.py
tests/fixtures/: betexplorer_match.html  betexplorer_missing_market.html  football_data_sample.csv  free_web_match.html  (+3 more)
(+23 files in other folders)
