[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "handicap-ai"
version = "0.1.0"
description = "Local football handicap analysis CLI"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "openpyxl>=3.1.5",
  "rapidfuzz>=3.9.0",
  "rich>=13.7.1",
  "typer>=0.12.3",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
handicap-ai = "handicap_ai.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
handicap_ai = ["templates/*.html", "static/*.css"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
